DATACMNS-1033 - setup jdk9 build.
Introduced a “jdk9” profile.

Introduced the maven toolchain plugin, in order to make the jdk version used configurable.

Introduced a shell script providing for easier building with jdk9

Included changes to make travis build at least start.